assets/css/style.css
/* Reset*/

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/*Utility*/

.bg-gold {
  background-color: #FF6801;
}

.m-left-0 {
  margin-left: 0px;
}


/*Position*/
.position-relative {
  position: relative;
}

.position-absolute {
  position: absolute;
}

main {
  padding-top: 100px;
}

/*classi leyout*/

.container {
  max-width: 1200px;
  margin: 0 auto;
}


.row {
  display: flex;
  flex-wrap: wrap;
  gap: 5px;
}

.card {
  width: calc(100%/3 - 30px / 3);
  height: 630px;
  margin-bottom: 20px;
  position: relative;
}

.card img {
  width: 100%;
}

.align-items-center {
  display: flex;
  align-items: center;
  justify-content: space-between;
}



/*header*/

header {
  background-color: #FF6801;
  position: fixed;
  width: 100%;
  z-index: 1;
}

header ul li a {
  text-decoration: none;
  color: white;
  display: inline;
  font-weight: 600;
  padding: 5px;

}

li {
  display: inline;
}

header img {
  height: 30px;
}

.head {
  margin: 0 auto;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 15px 0;

}

header i {
  color: white;
  padding: 5px;
}

.icone {
  margin-left: 100px;
}

/*main*/
.marca {
  color: gray;
  font-size: 16px;
}

.nome-prodotto {
  font-weight: bold;
  font-size: 20px;
}

.prezzo {
  font-size: 16px;
  color: red;
  font-weight: bold;
}

.prezzo-precedente {
  color: gray;
  text-decoration: line-through;

}

.like-button {
  background-color: white;
  padding: 10px;
  position: absolute;
  top: 20px;
  right: 0;
}

.like-button:hover {
  color: red;
}

.discount {
  color: white;
  background-color: red;
  padding: 4px 8px;
  position: absolute;
  bottom: 90px;
}

.sostenibility {
  color: white;
  background-color: green;
  padding: 4px 8px;
  position: absolute;
  bottom: 90px;
}

.second-adv {
  left: 60px;
}

footer {
  background-color: black;
  color: white;
  height: 100px;
  padding: 10px;
  padding-top: 20px;
  margin-top: 30px;

}

footer a {
  color: white;
  text-decoration: none;
  padding-right: 8px;
}

.footer-right p {
  padding-right: 50px;
  margin: 5px;
}

.footer-left h3 {
  text-align: left;
}


/*trick immagini*/



.img-container {
  position: relative;
}

.img-container img {
  display: block;
}

.img-on {
  display: block;

}

.img-off {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  opacity: 0;
}

.img-container:hover .img-off {
  opacity: 1;
}

a {
  text-decoration: none;
  color: black;
}

/*Impaginazione dettagli prodotto**/

.container600 {
  max-width: 600px;
  margin: 0 auto;
}

.container600 h1,
h2,
h3 {
  text-align: center;
}

.container600 img {
  height: 400px;
  display: inline-block;
  margin: 10px;
  margin-top: 20px;
}

.button-prodotto {
  display: inline-block;
  padding: 10px 20px;

  background-color: #FF6801;
  color: white;
  text-decoration: none;
  border-radius: 8px;
  margin: 10px;
}

.buttons {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-bottom: 20px;
}

